<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/textview_item_docs_summary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="기후변화협약 이행" />

    <TextView
        android:id="@+id/textview_item_docs_summary_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/small"
        app:layout_constraintBottom_toBottomOf="@id/textview_item_docs_summary_title"
        app:layout_constraintStart_toEndOf="@id/textview_item_docs_summary_title"
        tools:text="00:01" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_item_docs_summary_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:clipToPadding="true"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="@id/textview_item_docs_summary_title"
        app:layout_constraintTop_toBottomOf="@id/textview_item_docs_summary_title" />

</androidx.constraintlayout.widget.ConstraintLayout>