...
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            style="@style/GlobaSelectedButton"/>

        <Button
            android:id="@+id/button_docs_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:background="@drawable/main_button"
            android:clickable="true"
...
            android:text="정리"
            android:layout_weight="1"
            style="@style/GlobaButton"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_docs_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
...
