<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageview_item_docs_summary_description"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginTop="6dp"
        android:importantForAccessibility="no"
        android:src="@drawable/oval_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_item_docs_summary_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/normal"
        app:layout_constraintStart_toEndOf="@id/imageview_item_docs_summary_description"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="유엔기후변화회의에서 체결된 파리협정" />
</androidx.constraintlayout.widget.ConstraintLayout>